feat: オフスクリーンドキュメントの基本構造を追加
- NotebookLMControllerクラスを実装
- iframe読み込みとメッセージング機能
- 音声再生制御の基本実装

--- a/src/offscreen/offscreen.html
+++ b/src/offscreen/offscreen.html
@@ -2,10 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>NotebookLM Audio Player</title>
+  <title>NotebookLM Offscreen Document</title>
 </head>
 <body>
-  <audio id="audio-player" controls></audio>
+  <audio id="audio-player"></audio>
+  <!-- NotebookLM iframe will be inserted here dynamically -->
   <script src="offscreen.js"></script>
+  <script src="offscreen-controller.js"></script>
 </body>
 </html>
