fix: オフスクリーンドキュメントのメッセージハンドリングを改善
- メッセージリスナーの優先順位を調整
- 初期化ログを追加
- コントローラーへの委譲を明示的に

--- a/src/offscreen/offscreen.html
+++ b/src/offscreen/offscreen.html
@@ -7,7 +7,13 @@
 <body>
   <audio id="audio-player"></audio>
   <!-- NotebookLM iframe will be inserted here dynamically -->
+  <script>
+    console.log('Offscreen document loaded');
+  </script>
   <script src="offscreen.js"></script>
   <script src="offscreen-controller.js"></script>
+  <script>
+    console.log('All scripts loaded');
+  </script>
 </body>
 </html>
