--- a/src/offscreen/offscreen.html
+++ b/src/offscreen/offscreen.html
@@ -7,13 +7,8 @@
 <body>
   <audio id="audio-player"></audio>
   <!-- NotebookLM iframe will be inserted here dynamically -->
-  <script>
-    console.log('Offscreen document loaded');
-  </script>
+  <script src="offscreen-init.js"></script>
   <script src="offscreen.js"></script>
   <script src="offscreen-controller.js"></script>
-  <script>
-    console.log('All scripts loaded');
-  </script>
 </body>
 </html>
