fix: iframe通信の問題を修正 - 複数のアプローチを実装
- IframeControllerを追加してiframe制御を改善
- Chrome拡張機能のメッセージングAPIを使用
- postMessageとchrome.runtime.onMessageの両方をサポート
- バックグラウンドスクリプトにブロードキャスト機能を追加

--- a/src/offscreen/offscreen.html
+++ b/src/offscreen/offscreen.html
@@ -8,6 +8,7 @@
   <audio id="audio-player"></audio>
   <!-- NotebookLM iframe will be inserted here dynamically -->
   <script src="offscreen-init.js"></script>
+  <script src="iframe-controller.js"></script>
   <script src="offscreen.js"></script>
   <script src="offscreen-controller.js"></script>
 </body>
