feat: シンプルなオフスクリーンコントローラーを追加
- iframeの代わりに通常のタブを使用するシンプルなアプローチ
- オフスクリーンドキュメントから直接タブを制御
- 既存のコンテントスクリプトとの通信を活用

--- a/src/offscreen/offscreen.html
+++ b/src/offscreen/offscreen.html
@@ -11,5 +11,6 @@
   <script src="iframe-controller.js"></script>
   <script src="offscreen.js"></script>
   <script src="offscreen-controller.js"></script>
+  <script src="simple-controller.js"></script>
 </body>
 </html>
