--- a/src/sidepanel/sidepanel.html
+++ b/src/sidepanel/sidepanel.html
@@ -10,11 +10,21 @@
   <div class="container">
     <header>
       <h1 data-i18n="headerTitle">NotebookLM Reading List</h1>
-      <button id="refresh-btn" class="refresh-btn" data-i18n-attrs="title:refreshButtonTitle">
-        <svg width="16" height="16" viewBox="0 0 24 24">
-          <path fill="currentColor" d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/>
-        </svg>
-      </button>
+      <div class="header-controls">
+        <button id="theme-toggle-btn" class="theme-toggle-btn" title="Toggle dark mode">
+          <svg class="theme-icon-light" width="16" height="16" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M12 17.5C9.5 17.5 7.5 15.5 7.5 13S9.5 8.5 12 8.5 16.5 10.5 16.5 13 14.5 17.5 12 17.5M12 7C8.7 7 6 9.7 6 13S8.7 19 12 19 18 16.3 18 13 15.3 7 12 7M12 2L14.4 6.4L19 5.7L15.5 9.7L17.2 14L12 11.2L6.8 14L8.5 9.7L5 5.7L9.6 6.4L12 2Z"/>
+          </svg>
+          <svg class="theme-icon-dark" style="display: none;" width="16" height="16" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M12 3C7 3 3 7 3 12S7 21 12 21 21 17 21 12C21 11.5 21 11 20.9 10.5C19.4 12.2 17.2 13.2 14.8 13.2C11 13.2 7.8 10 7.8 6.2C7.8 3.9 9.1 1.9 11 .6C5.9 1.1 3 5.5 3 12C3 16.4 6.6 20 11 20C16.4 20 20 16.4 20 12S16.4 4 12 4Z"/>
+          </svg>
+        </button>
+        <button id="refresh-btn" class="refresh-btn" data-i18n-attrs="title:refreshButtonTitle">
+          <svg width="16" height="16" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/>
+          </svg>
+        </button>
+      </div>
     </header>
     
     <div class="filter-section">
